Fixing the main's section tablet view

--- a/scss/globals/_mixins.scss
+++ b/scss/globals/_mixins.scss
@@ -30,6 +30,19 @@
     color: #4eb7ff;
 }
 
+@mixin container-first-section-setup{
+    flex-direction: column;
+    text-align: center;
+
+    .about-img{
+        margin-bottom: 1.5rem;
+
+        img{
+            width: 100%;
+        }
+    }
+}
+
 // DARK MODE //
 @mixin dark-mode-nav{
     .nav-links{
@@ -108,6 +121,12 @@
 
 @mixin tablet-view{
     @media (min-width: 601px) and (max-width: 768px){
+      @content;
+    }
+}
+
+@mixin laptop-view{
+    @media (min-width: 769px) and (max-width: 992px){
       @content;
     }
 }
